# python-express

./: .dockerignore  .gitignore  Makefile  README.md  app.py  filestructure.txt  pyproject.toml
app/: __init__.py  config.py  logging_config.py
app/database/: connections.py
app/middleware/: __init__.py  cors.py  security.py
utils/: dotenv_config.py
